--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "svg.js": "^2.7.1",
+        "vue-notification": "^1.3.20",
         "vuetify": "^2.5.10"
     }
 }
