--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/jetstream": "2.1.4",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-permission": "^5.3",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
