--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ yarn-error.log
 public/js/app.js
 public/js/app.js
 public/js/app.js
+composer.lock
+package-lock.json
+public/js/app.js
+public/css/app.css
